--- a/clone/package.json
+++ b/clone/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.32.8",
+    "scss": "^0.2.4",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
