--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "firebase": "^8.4.1",
     "formit": "^0.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-with-firebase-auth": "^1.3.2",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4"
   },
