--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.4.1",
+    "firebase-admin": "^9.6.0",
+    "firebase-functions": "^3.13.2",
     "formit": "^0.0.2",
+    "passport-kakao": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "react-kakao-login": "^2.1.0",
+    "react-login-by-naver": "^0.1.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-with-firebase-auth": "^1.3.2",
