--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hot-loader": "^4.13.0",
     "react-kakao-login": "^2.1.0",
     "react-login-by-naver": "^0.1.8",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-with-firebase-auth": "^1.3.2",
