--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ functions/.eslintrc.js
 firebase.json
 .firebaserc
 src/Jin/Auth/KakaoSDK.js
+src/Jin/Naver.js
+src/util/firebase_config.js
+src/util/firebase_config.js
