--- a/clone/package.json
+++ b/clone/package.json
@@ -10,9 +10,15 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.0",
     "axios": "^0.21.1",
+    "firebase": "^8.4.2",
+    "firebase-admin": "^9.7.0",
     "next": "^10.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-kakao-login": "^2.1.0",
+    "react-login-by-naver": "^0.1.8",
+    "react-naver-login": "^0.1.4",
+    "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
