--- a/clone/package.json
+++ b/clone/package.json
@@ -33,6 +33,7 @@
     "simple-peer": "^9.11.0",
     "socket.io-client": "^4.0.2",
     "styled-components": "^5.2.3",
+    "vue": "^2.6.12",
     "web-vitals": "^1.1.1",
     "yarn": "^1.22.10"
   },
@@ -41,12 +42,6 @@
     "build": "NODE_PATH=src react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -61,7 +56,11 @@
     ]
   },
   "devDependencies": {
-    "@material-ui/core": "^4.11.3",
-    "prettier-eslint": "^12.0.0"
-  }
+    "@material-ui/core": "^4.11.3"
+  },
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
