--- a/clone/package.json
+++ b/clone/package.json
@@ -17,7 +17,7 @@
     "axios": "^0.21.1",
     "dotenv": "^9.0.1",
     "eslint-config-prettier": "^8.3.0",
-    "firebase": "^8.5.0",
+    "firebase": "^8.6.0",
     "firebase-admin": "^9.7.0",
     "next": "^10.1.3",
     "react": "^17.0.2",
@@ -56,7 +56,8 @@
     ]
   },
   "devDependencies": {
-    "@material-ui/core": "^4.11.3"
+    "@material-ui/core": "^4.11.3",
+    "babel-plugin-transform-runtime": "^6.23.0"
   },
   "main": "index.js",
   "keywords": [],
