--- a/clone/package.json
+++ b/clone/package.json
@@ -19,7 +19,9 @@
     "eslint-config-prettier": "^8.3.0",
     "firebase": "^8.6.0",
     "firebase-admin": "^9.7.0",
+    "lodash.shuffle": "^4.2.0",
     "next": "^10.1.3",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-kakao-login": "^2.1.0",
