--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase-admin": "^9.6.0",
     "firebase-functions": "^3.13.2",
     "formit": "^0.0.2",
+    "lodash.shuffle": "^4.2.0",
     "passport-kakao": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
