--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test":"jest"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "express-session": "^1.17.1",
     "getusermedia": "^2.0.1",
     "http": "^0.0.1-security",
+    "lodash.shuffle": "^4.2.0",
     "pug": "^3.0.2",
     "simple-peer": "^9.10.0",
     "socket.io": "4.0.1",
