--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,11 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.6",
-    "@types/lodash.shuffle": "^4.2.6",
     "dotenv": "^9.0.0",
     "firebase": "^8.4.2",
     "formit": "^0.0.2",
+    "lodash": "^4.17.21",
+    "lodash.shuffle": "^4.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
