--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.4",
     "simple-peer": "^9.11.0",
     "socket.io": "^4.0.1",
     "socket.io-client": "^4.0.1",
