--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "lodash.shuffle": "^4.2.0"
+    "lodash.shuffle": "^4.2.0",
+    "react-motion": "^0.5.2"
   },
   "devDependencies": {
     "prettier": "^2.3.2"
