--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "react-kakao-login": "^2.1.0",
+    "react-login-by-naver": "^0.1.8",
     "react-modal": "^3.14.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
