--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.6",
     "dotenv": "^9.0.0",
-    "firebase": "^8.4.2",
     "formit": "^0.0.2",
     "lodash": "^4.17.21",
     "lodash.shuffle": "^4.2.0",
@@ -22,6 +21,7 @@
     "react-kakao-login": "^2.1.0",
     "react-login-by-naver": "^0.1.8",
     "react-modal": "^3.14.3",
+    "react-naver-login": "^0.1.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
