--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.6",
+    "axios": "^0.21.1",
     "dotenv": "^9.0.0",
     "formit": "^0.0.2",
     "lodash": "^4.17.21",
