--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "lodash.shuffle": "^4.2.0",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-kakao-login": "^2.1.0",
