--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "dotenv": "^9.0.0",
     "formit": "^0.0.2",
+    "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "lodash.shuffle": "^4.2.0",
     "react": "^17.0.2",
