--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,8 +75,12 @@
   },
   "proxy": "http://localhost:4000",
   "devDependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@types/react": "^17.0.5",
     "@types/styled-components": "^5.1.9",
-    "eslint-config-prettier": "^8.3.0"
+    "clsx": "^1.1.1",
+    "eslint-config-prettier": "^8.3.0",
+    "prop-types": "^15.7.2"
   }
 }
