--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^9.0.0",
     "formit": "^0.0.2",
     "js-cookie": "^3.0.1",
+    "js-cookies": "^1.0.4",
     "lodash": "^4.17.21",
     "lodash.shuffle": "^4.2.0",
     "react": "^17.0.2",
