--- a/frontend/.env
+++ b/frontend/.env
@@ -1,11 +1,23 @@
 REACT_APP_DEVELOPMENT_CLIENT_IP=http://localhost:3000
 REACT_APP_DEVELOPMENT_SERVER_IP=http://localhost:4000
-REACT_APP_PRODUCTION_CLIENT_IP=http://startplayup.shop:80
-REACT_APP_PRODUCTION_SERVER_IP=http://startplayup.shop:80
-REACT_APP_WEBSITE_NAME=START PLAY UP
 
-REACT_APP_STUN_DOMAIN=stun:startplayupturnserver.shop:3478
+REACT_APP_PRODUCTION_CLIENT_IP=http://localhost:3000
+REACT_APP_PRODUCTION_SERVER_IP=http://localhost:4001
+
+; REACT_APP_PRODUCTION_CLIENT_IP=http://startplayup.shop:80
+; REACT_APP_PRODUCTION_SERVER_IP=http://startplayup.shop:80
+
+; REACT_APP_PRODUCTION_CLIENT_IP=https://springsnow.shop
+; REACT_APP_PRODUCTION_SERVER_IP=https://springsnow.shop
+
+; REACT_APP_PRODUCTION_CLIENT_IP=https://startplayup.shop
+; REACT_APP_PRODUCTION_SERVER_IP=https://startplayup.shop
+
+
+
+REACT_APP_WEBSITE_NAME=START PLAY UP
 # REACT_APP_STUN_DOMAIN=stun:stun.l.google.com:19302
+REACT_APP_STUN_DOMAIN=stun:startplayupturnserver.shop:3478
 REACT_APP_TURN_DOMAIN=turn:startplayupturnserver.shop:3478
 REACT_APP_TURN_ID=test
 REACT_APP_PASSWORD=test123
