--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "cross-env PORT=4000 NODE_ENV=development node serv.js",
+    "startPro": "cross-env PORT=8080 NODE_ENV=production node serv.js",
     "test": "jest"
   },
   "author": "",
@@ -12,6 +14,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^6.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -32,10 +35,15 @@
     "path": "^0.12.7",
     "pm2": "^5.1.2",
     "pug": "^3.0.2",
+    "redis": "^3.1.2",
     "simple-peer": "^9.10.0",
     "socket.io": "4.0.1",
+    "socket.io-redis": "^6.1.1",
     "socketio": "^1.0.0",
     "wrtc": "^0.4.7",
     "ws": "^7.4.4"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
